# sailsim-python

./: .gitignore  .pylintrc  CHANGELOG.md  ClassDiagram.class.violet.html  LICENSE  LICENSE.txt  README.md  build.bat  install.bat  installdev.bat  pyproject.toml  qtmain.py  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
docs/: class_diagram.class.violet.html  simulation_sequence.seq.violet.html
docs/Squall/: Squall.rotatePosition.ggb
docs/coordconversion/: cartToArg.ggb
sailsim/: __init__.py  main.py
sailsim/boat/: Boat.py  BoatDataHolder.py  FrameList.py  boat_forces.py  boat_getset.py  boat_momenta.py  boat_torques.py  boatgetset.py  coefficientsapprox.py
sailsim/gui/: ConfigBoat.py  ConfigWind.py  ControlBar.py  GUI.py  Map.py  SailsimGUI.py  SailsimMenu.py  actionslots.py  boatInspector.py  buildgui.bat  dialogs.py  gui.py  main.py  main.ui  mapView.py  qgraphicsitems.py  qtmain.py  tkinterutils.py  valueInspector.py
sailsim/sailor/: Commands.py  Frame.py  FrameList.py  Sailor.py  sailorgetset.py
sailsim/simulation/: Frame.py  FrameList.py  Simulation.py
sailsim/utils/: __init__.py  angleCalculations.py  anglecalculations.py  constants.py  conversion.py  coordconversion.py  wrench.py
sailsim/wind/: Fluctuationfield.py  Squall.py  Squallfield.py  Wind.py  Windfield.py
sailsim/world/: Boat.py  Squall.py  Squallfield.py  Wind.py  Windfield.py  World.py  squall.py  squallfield.py
simulation/: Simulation.py
tests/: basic_simulation.py  basictest.py  benchmark.py  maintest.py  runtests.bat  testsimulation.py
tests/gui/: _test_SailsimGUI.py  test_SailsimGUI.py
tests/simulation/: test_Simulation.py
tests/unit/: testutils.py  utils.py  world.py
tests/utils/: test_anglecalculations.py  test_coordconversion.py  testanglecalculations.py  testcoordconversion.py
tests/wind/: test_Fluctuationfield.py  test_Wind.py  test_Windfield.py  test_wind.py  testfluctuationfield.py  testwind.py
tests/world/: testwind.py
world/: Boat.py  Wind.py  World.py
