[metadata]
name = sailsim
description = A program to simulate sailboats and test sailing algorithms.
author = Tillman Keller, Michael Behrens
author_email = mfbehrens99@gmail.com
version = sailsim.__version__
url = https://github.com/mfbehrens99/sailsim
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT License
license_file = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.6
packages = find:
install_requires =
    opensimplex
    PySide6

[aliases]
test=pytest

# [options.entry_points]
# console_scripts =
#     screed = sailsim.gui:main
