[metadata]
name = sailsim
description = A program to simulate sailboats and test sailing algorithms.
author = Tillman Keller, Michael Behrens
author_email = mfbehrens99@gmail.com
version = 0.0.2
url = https://github.com/mfbehrens99/sailsim
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT License
license_file = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.6
packages = find:
install_requires =
    opensimplex >= 0.4
    PySide6

[aliases]
test=pytest

# [options.entry_points]
# console_scripts =
#     screed = sailsim.gui:main

[flake8]
max-line-length = 150
